# adoptAgentAI-librairy

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
src/adoptagentai/: __init__.py
src/adoptagentai/core/: __init__.py  agent.py  modelManager.py  modelStrategies.py
src/adoptagentai/integrations/: __init__.py
src/adoptagentai/integrations/google/: google.py  services.py
src/adoptagentai/utils/: __init__.py  api_keys.py
tests/: test_agent.py  test_api_keys.py
