[project]
name = "adoptagentai"
version = "0.1.0"
description = "A Python library to simplify API calls to Large Language Models (LLMs) and build versatile AI agents with minimal effort."
authors = [
    {name = "Samuel_Guillot",email = "samuelguillot75@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
packages = [{ include = "adoptagentai" }]
