[project]
name = "adoptagentai"
version = "0.1.0"
description = "A Python library to simplify API calls to Large Language Models (LLMs) and build versatile AI agents with minimal effort."
authors = [
    {name = "Samuel_Guillot",email = "samuelguillot75@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai (>=1.66.3,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "setuptools (>=76.0.0,<77.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
packages = [{ include = "adoptagentai" }]
